[package]
name = "merrymake-service-library"
version = "1.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12.4", features = ["blocking"] }
serde = { version = "1.0.199", features = ["derive"] }
serde_json = "1.0.116"

[[example]]
name = "minimal"
path = "examples/basic.rs"
