[package]
name = "merrymake-service-library"
version = "1.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.104"
ureq = "2.9.7"

[[example]]
name = "minimal"
path = "examples/basic.rs"
